--- a/assets/css/theme/default.css
+++ b/assets/css/theme/default.css
@@ -247,7 +247,7 @@ div[id^='uniform-'] span,
 .jvectormap-zoomout,
 .jvectormap-label {
     color: #555a60;
-    background-color: #FEFEFF;
+    background-color: #1D609B;
 }
 .irs-diapason,
 .ui-datepicker-buttonpane,
